@@ -39,8 +39,7 @@ foreign import stdcall "Windows.h SetConsoleTitleA" c_setConsoleTitle :: LPCSTR 
 --   to 'Development.Shake.shakeProgress'. Typically a program will use 'progressDisplay' to poll this value and produce
 --   status messages, which is implemented using this data type.
 data Progress = Progress
-    {isRunning :: !Bool -- ^ Starts out 'True', becomes 'False' once the build has completed.
-    ,isFailure :: !(Maybe String) -- ^ Starts out 'Nothing', becomes 'Just' a target name if a rule fails.
+    {isFailure :: !(Maybe String) -- ^ Starts out 'Nothing', becomes 'Just' a target name if a rule fails.
     ,countSkipped :: {-# UNPACK #-} !Int -- ^ Number of rules which were required, but were already in a valid state.
     ,countBuilt :: {-# UNPACK #-} !Int -- ^ Number of rules which were have been built in this run.
     ,countUnknown :: {-# UNPACK #-} !Int -- ^ Number of rules which have been built previously, but are not yet known to be required.
@@ -53,10 +52,9 @@ data Progress = Progress
     deriving (Eq,Ord,Show,Data,Typeable)
 
 instance Monoid Progress where
-    mempty = Progress True Nothing 0 0 0 0 0 0 0 (0,0)
+    mempty = Progress Nothing 0 0 0 0 0 0 0 (0,0)
     mappend a b = Progress
-        {isRunning = isRunning a && isRunning b
-        ,isFailure = isFailure a `mplus` isFailure b
+        {isFailure = isFailure a `mplus` isFailure b
         ,countSkipped = countSkipped a + countSkipped b
         ,countBuilt = countBuilt a + countBuilt b
         ,countUnknown = countUnknown a + countUnknown b
@@ -198,18 +196,15 @@ progressDisplayTester = progressDisplayer False
 progressDisplayer :: Bool -> Double -> (String -> IO ()) -> IO Progress -> IO ()
 progressDisplayer sleep sample disp prog = do
     disp "Starting..." -- no useful info at this stage
-    loop $ message sample idStream
+    catchJust (\x -> if x == ThreadKilled then Just () else Nothing) (loop $ message sample idStream) (const $ disp "Finished")
     where
         loop :: Stream Progress String -> IO ()
         loop stream = do
             when sleep $ threadDelay $ ceiling $ sample * 1000000
             p <- prog
-            if not $ isRunning p then
-                disp "Finished"
-             else do
-                (msg, stream) <- return $ runStream stream p
-                disp $ msg ++ maybe "" (\err -> ", Failure! " ++ err) (isFailure p)
-                loop stream
+            (msg, stream) <- return $ runStream stream p
+            disp $ msg ++ maybe "" (\err -> ", Failure! " ++ err) (isFailure p)
+            loop stream
 
 
 {-# NOINLINE xterm #-}
