@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Remove isRunning, kill the progress thread on completion
     #47, improve the perform on ?==, especially on "//*"
     #68, improve the docs for addOracle
     #55, ensure if you need phony targets you rebuild every time
